# gnome-attendant

./: README.md  freerdp.py  gnome-attendant  gnome_attendant.py  hello.attendant  pyproject.toml  setup-session.sh  start-session.sh
